# OverBind

./: .gitignore  .prettierignore  KeyToController.sln  LICENSE  OverBind.sln  README.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: git.yml  release.yml
KeyToController/: KeyToController.vcxproj  KeyToController.vcxproj.filters  build_options.bat  main.cpp
OverBind/: OverBind.vcxproj  build_options.bat  main.cpp
masher-overlays/masher_linux/: Cargo.toml
masher-overlays/masher_linux/src/: lib.rs
masher-overlays/masher_win/: Cargo.toml  build.rs  d3d11.def
masher-overlays/masher_win/src/: lib.rs  lib_new_windows.rs
pkg/AppImage/: AppImage.sh
pkg/GIT/: PKGBUILD
pkg/STABLE/: PKGBUILD
src/: App.tsx  Edit.tsx  constants.ts  styles.css
src-tauri/: Cargo.toml  OverBind_app_settings.json  OverBind_conf.json  build.rs  tauri.conf.json  tauri.linux.conf.json
src-tauri/capabilities/: desktop.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: cursor_overlay.rs  key_interceptor.rs  linux_key_interceptor.rs  livesplit_core.rs  mac_key_interceptor.rs  main.rs  masher_overlay.rs  text_masher.rs  windows_gamepad_interceptor.rs  windows_key_interceptor.rs
src/components/: Dropdown.tsx  Edit.tsx  InputTypeIcon.tsx  OptionsList.tsx  SettingsModal.tsx
ui/: .prettierrc  index.html  package-lock.json  package.json
ui/src/: App.tsx  Edit.tsx  constants.ts  styles.css
ui/src-tauri/: Cargo.toml  OverBind_conf.json  OverBind_conf.txt  tauri.conf.json
ui/src-tauri/src/: key_interceptor.rs  main.rs
