[package]
name = "overbind"
version = "1.4.1"
description = "Bind keyboard buttons to Xbox360 controller inputs"
authors = ["arnabp", "cjonas1999"]
license = ""
repository = "https://github.com/cjonas1999/OverBind"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "os-all", "fs-all", "system-tray", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19.0"
tauri-plugin-window-state = "0.1.0"
log = "0.4.22"
simplelog = "0.12.2"

[target."cfg(windows)".dependencies]
vigem-client = "0.1.4"
windows = { version = "0.52.0", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_Accessibility" ] }

[target."cfg(target_os = \"linux\")".dependencies]
uinput = "0.1.3"
input = "0.9.0"
evdev = "0.12.2"
x11rb = "0.13.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
