[package]
name = "overbind"
version = "1.4.2"
description = "Bind keyboard buttons to Xbox360 controller inputs"
authors = ["arnabp", "cjonas1999"]
license = ""
repository = "https://github.com/cjonas1999/OverBind"
edition = "2021"
default-run = "overbind"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
tauri = { version = "2.0.1", features = ["tray-icon"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19.0"
tauri-plugin-window-state = "2.0.0-rc"
log = "0.4.22"
simplelog = "0.12.2"
tauri-plugin-shell = "2.0.1"
tauri-plugin-os = "2.0.1"
tauri-plugin-fs = "2.0.1"
dirs = "5.0.1"

[[bin]]
name = "overbind"
path = "src/main.rs"

[[bin]]
name = "cursor-overlay"
path = "src/cursor_overlay.rs"

[target."cfg(windows)".dependencies]
vigem-client = "0.1.4"
windows = { version = "0.52.0", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_Accessibility" ] }

[target."cfg(target_os = \"linux\")".dependencies]
uinput = "0.1.3"
input = "0.9.0"
evdev = "0.12.2"
x11rb = { version = "0.13.1", features = ["xfixes"] }
gtk = "0.18.1"
glib = "0.20.4"
cairo-rs = "0.19.4"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2.0.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
