[package]
name = "overbind"
version = "1.5.5"
description = "Bind keyboard buttons to Xbox360 controller inputs"
authors = ["arnabp", "cjonas1999"]
license = ""
repository = "https://github.com/cjonas1999/OverBind"
edition = "2021"
default-run = "overbind"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = ["tray-icon", "image-png"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
once_cell = "1.21.4"
tauri-plugin-window-state = "2.4.1"
log = "0.4.29"
fern = "0.7"
simplelog = "0.12.2"
tauri-plugin-shell = "2.3.5"
tauri-plugin-os = "2.2.0"
tauri-plugin-fs = "2.5.0"
dirs = "6.0.0"
chrono = "0.4.44"
tauri-plugin-log = "2.8.0"

[[bin]]
name = "overbind"
path = "src/main.rs"

[[bin]]
name = "cursor-overlay-x86_64-unknown-linux-gnu"
path = "src/cursor_overlay.rs"

[target."cfg(windows)".dependencies]
vigem-client = "0.1.4"
windows = { version = "0.52.0", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_Accessibility" ] }

[target."cfg(target_os = \"linux\")".dependencies]
uinput = "0.1.3"
input = "0.9.0"
evdev = "0.12.2"
x11rb = { version = "0.13.1", features = ["xfixes"] }
gtk = "0.18.1"
glib = "0.20.4"
cairo-rs = "0.19.4"

[target."cfg(target_os = \"macos\")".dependencies]
core-graphics = "0.24.0"
core-foundation = "0.10.0"
io-kit-sys = "0.4.1"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2.10.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
